@@ -2208,6 +2208,7 @@ GameSymbols GameSymbols::singleton = GameSymbols();
 static AccessorTable gameTable[] =
 {
     //name,                     rettype,                        setorget,     var,              numindex,      params
+    { "IncrementQuest",         ScriptParser::TYPE_FLOAT,         GETTER,       INCQST,               1,      {  ScriptParser::TYPE_GAME,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "GetCurScreen",           ScriptParser::TYPE_FLOAT,         GETTER,       CURSCR,               1,      {  ScriptParser::TYPE_GAME,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "GetCurDMapScreen",       ScriptParser::TYPE_FLOAT,         GETTER,       CURDSCR,              1,      {  ScriptParser::TYPE_GAME,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "GetCurMap",              ScriptParser::TYPE_FLOAT,         GETTER,       CURMAP,               1,      {  ScriptParser::TYPE_GAME,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
