@@ -1306,6 +1306,7 @@ int load_quest(gamedata *g, bool report)
     }
     else
     {
+	
         if(!ret && strcmp(g->title,QHeader.title))
         {
             ret = qe_match;
@@ -1320,6 +1321,7 @@ int load_quest(gamedata *g, bool report)
     
     if(ret && report)
     {
+	zprint2("load quest ret: %d\n", ret);
         system_pal();
         char buf1[80],buf2[80];
         sprintf(buf1,"Error loading %s:",get_filename(qstpath));
@@ -1333,7 +1335,7 @@ int load_quest(gamedata *g, bool report)
         
         game_pal();
     }
-    
+    zprint2("load quest ret: %d\n", ret);
     return ret;
 }
 
@@ -4095,6 +4097,22 @@ int main(int argc, char* argv[])
             initZScriptGlobalRAM();
             ZScriptVersion::RunScript(SCRIPT_GLOBAL, GLOBAL_SCRIPT_END);
             ending();
+        }
+        break;
+	
+	case qINCQST:
+        {
+            Link.setDontDraw(true);
+		//Link.setCharging(0);//don't have the sword out during the ending. 
+		//Link.setSwordClk(0);
+            show_subscreen_dmap_dots=true;
+            show_subscreen_numbers=true;
+            show_subscreen_items=true;
+            show_subscreen_life=true;
+            
+            initZScriptGlobalRAM();
+            ZScriptVersion::RunScript(SCRIPT_GLOBAL, GLOBAL_SCRIPT_END);
+            ending_scripted();
         }
         break;
         
