@@ -1,5 +1,10 @@
 ChangeLog for 2.53.1
 
+//Beta 40
+Added Game->IncrementQuest().
+Backported Rob's fixes for abc list size from 2.55.
+	( ZoriaRPG, 19th April, 2020 )
+
 //Beta 39
 Backported the Linux console from 2.55 to 2.53.1. 
 	( ZoriaRPG, 19th April, 2020 )
